# agentes-lab2

./: README.md
agente_mcp/: .env.example  Dockerfile  requirements.txt
agente_mcp/src/: main.py
agente_mcp/src/routes/: chat.py
agente_mcp/src/services/: agent_service.py  tools.py
agente_mcp/src/utils/: environment.py
agente_mcp_2/: .env.example  EVIDENCIAS.docx  lab_M5S1_guardrails_redteaming.ipynb  main.py  openapi.yaml  pyproject.toml  requirements.txt
agente_mcp_2/src/controllers/: chat_controller.py
agente_mcp_2/src/repositories/: history_repository.py
agente_mcp_2/src/routes/: chat.py
agente_mcp_2/src/services/: agent_service.py  guardrails.py  prompt.py
agente_mcp_2/src/utils/: environment.py
agente_mcp_2/tests/: test_guardrails.py
agente_simple/: .env.example  .gitignore  requirements.txt
agente_simple/src/: main.py
agente_simple/src/controllers/: chat_controller.py
agente_simple/src/repositories/: __init__.py
agente_simple/src/repositories/models/: history.py
agente_simple/src/services/: agent_service.py  system_prompt.txt  tools.py
agente_simple/src/utils/: environment.py  logger.py
setup/: .env.example  .gitignore  database.sql  qdrant-db.ipynb  requirements.txt
setup/data/: cursos.md  docentes.md  empresas_aliadas.md  faq.md  graduados.md  horarios.md  matricula.md  programas.md  reglamento.md  sedes.md
