[project]
name = "agente-mcp-2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "langchain==1.3.1",
    "langchain-core>=0.3.0",
    "langchain-mcp-adapters>=0.3.0",
    "langchain-openai>=0.3.0",
    "langchain-qdrant>=0.2.0",
    "langgraph>=0.4.0",
    "langsmith>=0.2.0",
    "mcp>=1.13.0",
    "psycopg2-binary>=2.9.0",
    "pydantic>=2.10.0",
    "python-decouple>=3.8",
    "python-json-logger>=2.0.7",
    "qdrant-client>=1.9.0",
    "sqlalchemy>=2.0.0",
    "uvicorn[standard]>=0.32.0",
]
